--- a/public/css/main.css
+++ b/public/css/main.css
@@ -82,7 +82,6 @@ p#error {
 div#display {
 	height: 100vh;
 	width: 100vw;
-	background: url('/img/background.jpg');
 	background-size: 100% 100%;
 	overflow: hidden;
 	display: flex;
@@ -94,7 +93,7 @@ div#display {
 div.battlefield {
 	height: 600px;
 	width: 1000px;
-	box-shadow: 0px 0px 5px 3px white;
+	box-shadow: 0px 0px 5px 3px cyan;
 	border-radius: 3px;
 	margin: auto;
 }
