--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,8 @@ body {
 div#login {
 	height: 100vh;
 	width: 100vw;
+	background-image: url('/img/museo.jpg');
+	background-size: 100% auto;
 }
 
 div#login h1 {
@@ -18,6 +20,7 @@ div#login h1 {
 div#nickname {
 	height: 100vh;
 	width: 100vw;
+	background-image: url('/img/russia.jpg');
 	background-size: 100% 120%; 
 	overflow: hidden;
 	display: flex;
@@ -82,7 +85,8 @@ p#error {
 div#display {
 	height: 100vh;
 	width: 100vw;
-	background-size: 100% 100%;
+	background: url('/img/10.jpg');
+	background-size: 100% auto;
 	overflow: hidden;
 	display: flex;
 	align-items: center;
@@ -93,14 +97,43 @@ div#display {
 div.battlefield {
 	height: 600px;
 	width: 1000px;
-	box-shadow: 0px 0px 5px 3px cyan;
+	box-shadow: 0px 0px 5px 3px darkcyan;
 	border-radius: 3px;
 	margin: auto;
 }
 
+div.image-profile {
+	background-size: 100% auto;
+}
+
+button:disabled {
+	opacity: .5;
+}
+
+div#selectplayer .image {
+	width: 112.5px;
+	height: 112.5px;
+	background-size: 100% auto;
+}
+
+button.image0 {
+	background-image: url('/img/rope.jpg');
+}
+
+button.image1 {
+	background-image: url('/img/venus.jpg');
+}
+
+button.image2 {
+	background-image: url('/img/pensador.jpg');
+}
+
+button.image3 {
+	background-image: url('/img/disco.jpg');
+}
+
 button#revivirbtn{
 	display: block;
-	background-color: cornsilk;
 	border-style: hidden;
 	width: 100%;
 	height: 30px;
@@ -111,11 +144,12 @@ button#revivirbtn{
 
 div.divcito, div.dying {
 	background: red;
-	width: 100px;
-	height: 100px;
+	background-size: 100% auto;
+	width: 200px;
+	height: 200px;
 	position: absolute;
-	top: 300px;
-	left: 300px;
+	top: 400px;
+	left: 400px;
 	border-radius: 5px;
 	display: flex;
 	align-items: center;
